force-app/main/default/objects/openq__MIRF__c/openq__MIRF__c.object-meta.xml
<CustomObject>
    <description>Medical Information Request Form.</description>
    <label>MIRF</label>
    <nameField>
        <displayFormat>MIRF-{0000}</displayFormat>
        <label>MIRF Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MIRFs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>