force-app/main/default/objects/openq__MIRF__c/fields/openq__Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>openq__Contact_Full_Name__c</fullName>
    <formula>openq__First_Name__c &amp; &quot; &quot; &amp; IF(openq__Middle_Name__c != null, openq__Middle_Name__c &amp; &quot; &quot;, &quot;&quot;) &amp; openq__Last_Name__c</formula>
    <label>Contact Full Name</label>
    <type>Text</type>
</CustomField>