force-app/main/default/objects/openq__MIRF__c/fields/openq__Information_Request__c.field-meta.xml
<CustomField>
    <fullName>openq__Information_Request__c</fullName>
    <label>Information Request</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>