force-app/main/default/objects/openq__MIRF__c/fields/openq__Institution__c.field-meta.xml
<CustomField>
    <fullName>openq__Institution__c</fullName>
    <label>Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>