force-app/main/default/objects/openq__MIRF__c/fields/openq__Phone__c.field-meta.xml
<CustomField>
    <fullName>openq__Phone__c</fullName>
    <label>Phone</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>