force-app/main/default/objects/openq__MIRF__c/fields/openq__Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>openq__Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>