force-app/main/default/objects/openq__MIRF__c/fields/openq__Representative_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>openq__Representative_Contact_First_Name__c</fullName>
    <label>Representative Contact First Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>